<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBgColor">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivMovieBanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:src="@android:color/background_dark"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNavBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mp_half"
            android:layout_marginTop="@dimen/mp_half"
            android:src="@drawable/vec_nav_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glLeft"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glPosterRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".30" />

        <ImageView
            android:id="@+id/ivMovie"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@android:color/darker_gray"
            android:transitionName="movie_poster_anim"
            app:layout_constraintBottom_toBottomOf="@+id/rbMovie"
            app:layout_constraintDimensionRatio="2:3"
            app:layout_constraintLeft_toLeftOf="@+id/glLeft"
            app:layout_constraintRight_toRightOf="@id/glPosterRight"
            tools:src="@drawable/ic_temp_movie" />

        <TextView
            android:id="@+id/tvMovieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/text_m"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieBanner"
            tools:text="Tomb Raider" />

        <TextView
            android:id="@+id/tvMovieReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_xs"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
            tools:text="2-14-2018" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rbMovie"
            style="@style/BaseRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:stepSize="1"
            app:layout_constraintStart_toEndOf="@+id/ivMovie"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieReleaseDate"
            tools:rating="3" />

        <TextView
            android:id="@+id/tvTrailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_double"
            android:text="@string/lbl_trailer"
            android:textSize="@dimen/text_l"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/ivMovie" />

        <com.gp.movielist.utils.EmptyRecyclerView
            android:id="@+id/emptyTrailers"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/mp_quarter"
            app:emptyText="@string/lbl_trailer_empty"
            app:layout_constraintLeft_toLeftOf="@id/glLeft"
            app:layout_constraintRight_toRightOf="@id/glRight"
            app:layout_constraintTop_toBottomOf="@id/tvTrailers" />

        <TextView
            android:id="@+id/tvOverView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_double"
            android:text="@string/lbl_overview"
            android:textSize="@dimen/text_l"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/emptyTrailers" />

        <TextView
            android:id="@+id/tvOverViewContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_quarter"
            android:text="Overview"
            android:textSize="@dimen/text_s"
            app:layout_constraintEnd_toEndOf="@id/glRight"
            app:layout_constraintStart_toEndOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvOverView" />

        <TextView
            android:id="@+id/tvCasts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_double"
            android:text="@string/lbl_casts"
            android:textSize="@dimen/text_l"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvOverViewContent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCasts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_quarter"
            app:layout_constraintEnd_toEndOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/tvCasts" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glRight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_double"
            android:text="@string/lbl_reviews"
            android:textSize="@dimen/text_l"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/glLeft"
            app:layout_constraintTop_toBottomOf="@+id/rvCasts" />

        <com.gp.movielist.utils.EmptyRecyclerView
            android:id="@+id/emptyReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mp_quarter"
            app:emptyText="@string/lbl_review_empty"
            app:layout_constraintEnd_toEndOf="@id/glRight"
            app:layout_constraintStart_toStartOf="@id/glLeft"
            app:layout_constraintTop_toBottomOf="@id/tvReviews" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>